# MoleculeViewer_CPlusPlus

./: CMakeLists.txt  CMakeUserPresets.json  DataStructs.h  MoleculeFactory.cpp  MoleculeFactory.h  MoleculeGLWidget.cpp  MoleculeGLWidget.h  README.md  SDFParser.cpp  SDFParser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Test_Molecules/: Ibuprofen.sdf  Lisinopril.sdf  Paracetamol.sdf
